--- a/projects/sa-charts-demo/src/index.html
+++ b/projects/sa-charts-demo/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
   <meta charset="utf-8">
   <title>SaChartsDemo</title>
   <base href="/">
